src/snapshots/templates__test__render_identifier.snap
---
source: src/main.rs
assertion_line: 300
expression: "Hello { name }, good to meet you"

---
import gleam/string_builder.{StringBuilder}

pub fn render_builder(name) -> StringBuilder {
    let builder = string_builder.from_string("Hello ")
    let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, ", good to meet you")

    builder
}

pub fn render(name) -> String {
    string_builder.to_string(render_builder(name))
}

