src/snapshots/templates__test__render_if_else_statement.snap
---
source: src/main.rs
assertion_line: 744
expression: "Hello {% if is_user %}User{% else %}Unknown{% endif %}"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(is_user is_user) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = case is_user {
        True -> {
                let builder = string_builder.append(builder, "User")

            builder
        }
        False -> {
                let builder = string_builder.append(builder, "Unknown")

            builder
        }
}

    builder
}

pub fn render(is_user is_user) -> String {
    string_builder.to_string(render_builder(is_user: is_user))
}

