src/snapshots/templates__test__render_import.snap
---
source: src/main.rs
assertion_line: 766
expression: "{> import user.{User}\n{{ name }}"

---
import gleam/string_builder.{StringBuilder}
import gleam/list

import user.{User}

pub fn render_builder(name name) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, name)

    builder
}

pub fn render(name name) -> String {
    string_builder.to_string(render_builder(name: name))
}

