src/snapshots/templates__test__render_multiline.snap
---
source: src/main.rs
assertion_line: 845
expression: "<ul>\n{% for entry in my_list %}\n    <li>{{ entry }}</li>\n{% endfor %}\n</ul>"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(my_list my_list) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "<ul>
")
    let builder = list.fold(my_list, builder, fn(builder, entry) {
            let builder = string_builder.append(builder, "
    <li>")
    let builder = string_builder.append(builder, entry)
    let builder = string_builder.append(builder, "</li>
")

        builder
})
    let builder = string_builder.append(builder, "
</ul>")

    builder
}

pub fn render(my_list my_list) -> String {
    string_builder.to_string(render_builder(my_list: my_list))
}

