src/snapshots/templates__test__render_nested_if_statements.snap
---
source: src/main.rs
assertion_line: 549
expression: "Hello {% if is_user %}{% if is_admin %}Admin{% else %}User{% endif %}{% endif %}"

---
import gleam/string_builder.{StringBuilder}

pub fn render_builder(is_user is_user, is_admin is_admin) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
let builder = case is_user {
    True -> {
        let builder = case is_admin {
    True -> {
            let builder = string_builder.append(builder, "Admin")

        builder
    }
    False -> {
            let builder = string_builder.append(builder, "User")

        builder
    }
}
        builder
    }
    False -> {
        
        builder
    }
}
    builder
}

pub fn render(is_user is_user, is_admin is_admin) -> String {
    string_builder.to_string(render_builder(is_user: is_user, is_admin: is_admin))
}

