src/snapshots/templates__test__render_pure_text.snap
---
source: src/main.rs
assertion_line: 458
expression: "Hello name, good to meet you"

---
import gleam/string_builder.{StringBuilder}

pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello name, good to meet you")

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}

