src/snapshots/templates__test__render_two_identifiers.snap
---
source: src/main.rs
assertion_line: 724
expression: "Hello {{ name }}, {{ adjective }} to meet you"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(name name, adjective adjective) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, ", ")
    let builder = string_builder.append(builder, adjective)
    let builder = string_builder.append(builder, " to meet you")

    builder
}

pub fn render(name name, adjective adjective) -> String {
    string_builder.to_string(render_builder(name: name, adjective: adjective))
}

